[gd_scene load_steps=21 format=3 uid="uid://dlgax08f5ipno"]

[ext_resource type="Script" uid="uid://4c8o85m5o46a" path="res://e/kitchen.gd" id="1_cw8m5"]
[ext_resource type="Texture2D" uid="uid://ccmjptodv6l3d" path="res://images/sugar.png" id="2_sa2ce"]
[ext_resource type="Texture2D" uid="uid://di0ongpvptsvd" path="res://images/eeeee.png" id="3_k0orp"]
[ext_resource type="Script" uid="uid://cynpdpekymxlb" path="res://e/object.gd" id="3_sa2ce"]
[ext_resource type="Texture2D" uid="uid://dg81q8rrkd4j0" path="res://images/flour.png" id="4_0lygj"]
[ext_resource type="Texture2D" uid="uid://c7tsrlua84nab" path="res://images/salt.png" id="5_go31l"]
[ext_resource type="Texture2D" uid="uid://v60qht6w6t8j" path="res://images/milk.png" id="6_k0orp"]
[ext_resource type="Texture2D" uid="uid://dk0hvt5yxeqee" path="res://images/bowl.png" id="7_aygwg"]
[ext_resource type="Theme" uid="uid://b4naw2i47mcoi" path="res://e/theme.tres" id="8_go31l"]

[sub_resource type="AtlasTexture" id="AtlasTexture_aygwg"]
atlas = ExtResource("7_aygwg")
region = Rect2(0, 0, 378, 339)

[sub_resource type="AtlasTexture" id="AtlasTexture_kkbhl"]
atlas = ExtResource("3_k0orp")
region = Rect2(0, 0, 414, 308)

[sub_resource type="AtlasTexture" id="AtlasTexture_g5slg"]
atlas = ExtResource("3_k0orp")
region = Rect2(414, 0, 414, 308)

[sub_resource type="AtlasTexture" id="AtlasTexture_6ue45"]
atlas = ExtResource("3_k0orp")
region = Rect2(828, 0, 414, 308)

[sub_resource type="AtlasTexture" id="AtlasTexture_5rutp"]
atlas = ExtResource("3_k0orp")
region = Rect2(0, 308, 414, 308)

[sub_resource type="AtlasTexture" id="AtlasTexture_3voc5"]
atlas = ExtResource("3_k0orp")
region = Rect2(414, 308, 414, 308)

[sub_resource type="AtlasTexture" id="AtlasTexture_84lbm"]
atlas = ExtResource("3_k0orp")
region = Rect2(828, 308, 414, 308)

[sub_resource type="AtlasTexture" id="AtlasTexture_0158g"]
atlas = ExtResource("3_k0orp")
region = Rect2(0, 616, 414, 308)

[sub_resource type="SpriteFrames" id="SpriteFrames_s4hgr"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_aygwg")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_kkbhl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g5slg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6ue45")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5rutp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3voc5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_84lbm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0158g")
}],
"loop": false,
"name": &"new_animation",
"speed": 3.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_g5slg"]
radius = 173.25671
height = 419.6515

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kkbhl"]
size = Vector2(192, 247)

[node name="kitchen" type="Node2D"]
script = ExtResource("1_cw8m5")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 1928.0
offset_bottom = 1101.0
color = Color(0.54901963, 0.34117648, 0.27058825, 1)

[node name="bowl" type="AnimatedSprite2D" parent="."]
position = Vector2(938, 550)
scale = Vector2(1.0820106, 1.2640117)
sprite_frames = SubResource("SpriteFrames_s4hgr")

[node name="bowl" type="Area2D" parent="bowl"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="bowl/bowl"]
position = Vector2(-0.9242072, -1.5822659)
rotation = 1.5745461
shape = SubResource("CapsuleShape2D_g5slg")

[node name="sugar" type="Sprite2D" parent="."]
position = Vector2(237, 396)
texture = ExtResource("2_sa2ce")
script = ExtResource("3_sa2ce")

[node name="Button" type="Button" parent="sugar"]
modulate = Color(1, 1, 1, 0)
anchors_preset = -1
anchor_left = 0.16600001
anchor_top = 0.134
anchor_right = 0.82400006
anchor_bottom = 0.851
offset_left = -151.642
offset_top = -169.426
offset_right = -143.48802
offset_bottom = -169.48901

[node name="sugar" type="Area2D" parent="sugar"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="sugar/sugar"]
position = Vector2(-5, -8.5)
shape = SubResource("RectangleShape2D_kkbhl")

[node name="flour" type="Sprite2D" parent="."]
position = Vector2(241, 712)
texture = ExtResource("4_0lygj")
script = ExtResource("3_sa2ce")

[node name="Button" type="Button" parent="flour"]
modulate = Color(1, 1, 1, 0)
anchors_preset = -1
anchor_left = 0.16600001
anchor_top = 0.134
anchor_right = 0.82400006
anchor_bottom = 0.851
offset_left = -155.642
offset_top = -169.426
offset_right = -147.48802
offset_bottom = -169.48901

[node name="flour" type="Area2D" parent="flour"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="flour/flour"]
position = Vector2(-5, -8.5)
shape = SubResource("RectangleShape2D_kkbhl")

[node name="salt" type="Sprite2D" parent="."]
position = Vector2(1533, 347)
texture = ExtResource("5_go31l")
script = ExtResource("3_sa2ce")

[node name="Button" type="Button" parent="salt"]
modulate = Color(1, 1, 1, 0)
anchors_preset = -1
anchor_left = 0.16600001
anchor_top = 0.134
anchor_right = 0.82400006
anchor_bottom = 0.851
offset_left = -150.642
offset_top = -162.426
offset_right = -142.48802
offset_bottom = -162.48901

[node name="salt" type="Area2D" parent="salt"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="salt/salt"]
position = Vector2(-5, 4)
shape = SubResource("RectangleShape2D_kkbhl")

[node name="milk" type="Sprite2D" parent="."]
position = Vector2(1629, 721)
texture = ExtResource("6_k0orp")
script = ExtResource("3_sa2ce")

[node name="Button" type="Button" parent="milk"]
modulate = Color(1, 1, 1, 0)
anchors_preset = -1
anchor_left = 0.16600001
anchor_top = 0.134
anchor_right = 0.82400006
anchor_bottom = 0.851
offset_left = -151.642
offset_top = -164.426
offset_right = -143.48802
offset_bottom = -164.48901

[node name="milk" type="Area2D" parent="milk"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="milk/milk"]
position = Vector2(-5, -8.5)
shape = SubResource("RectangleShape2D_kkbhl")

[node name="Button" type="Button" parent="."]
offset_left = 75.0
offset_top = 81.0
offset_right = 152.0
offset_bottom = 142.0
theme = ExtResource("8_go31l")
text = "?"

[node name="border" type="Node2D" parent="."]

[node name="ColorRect12" type="ColorRect" parent="border"]
offset_left = 1934.0
offset_top = 1037.0
offset_right = 1977.7975
offset_bottom = 2959.0059
rotation = 1.5707964
color = Color(0.54901963, 0.21568628, 0.21960784, 1)

[node name="ColorRect11" type="ColorRect" parent="border"]
offset_left = 1921.0
offset_top = 1.0
offset_right = 1964.7975
offset_bottom = 1923.006
rotation = 1.5707964
color = Color(0.54901963, 0.21568628, 0.21960784, 1)

[node name="ColorRect10" type="ColorRect" parent="border"]
offset_left = 1881.0
offset_top = 1.0
offset_right = 1921.0
offset_bottom = 1173.0
color = Color(0.54901963, 0.21568628, 0.21960784, 1)

[node name="ColorRect9" type="ColorRect" parent="border"]
offset_right = 40.0
offset_bottom = 1172.0
color = Color(0.54901963, 0.21568628, 0.21960784, 1)

[connection signal="animation_finished" from="bowl" to="." method="_on_bowl_animation_finished"]
[connection signal="area_entered" from="bowl/bowl" to="." method="_on_area_2d_area_entered"]
[connection signal="button_down" from="sugar/Button" to="sugar" method="_on_button_button_down"]
[connection signal="button_up" from="sugar/Button" to="sugar" method="_on_button_button_up"]
[connection signal="button_down" from="flour/Button" to="flour" method="_on_button_button_down"]
[connection signal="button_up" from="flour/Button" to="flour" method="_on_button_button_up"]
[connection signal="button_down" from="salt/Button" to="salt" method="_on_button_button_down"]
[connection signal="button_up" from="salt/Button" to="salt" method="_on_button_button_up"]
[connection signal="button_down" from="milk/Button" to="milk" method="_on_button_button_down"]
[connection signal="button_up" from="milk/Button" to="milk" method="_on_button_button_up"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
